@@ -2,3 +2,5 @@ Paper Mario Items 0.3.0 -- Update notes
 - Added Space Food
 - Added Allergic status effect
   + A select few status effects will still be applied even when the player has this effect
+- Adjusted the spawn rate of Cookbook in natural chests
+- Added Shadow Chests as candidates for spawning a Cookbook (there were formerly only Living Wood Chests, Skyware Chests, and Lihzahrd Chests as candidates)
